cypress/scripts/sample.database-mesh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhb-database-mesh-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "${PUBLIC_IP}/32"
    cert-manager.io/cluster-issuer: letsencrypt-staging
  labels:
    name: hhb-database-mesh-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: database.${APP_HOST_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hhb-database-mesh
                port:
                  number: 80
  tls:
    - hosts:
        - database.${APP_HOST_NAME}
      secretName: hhb-development-ingress-tls-secret
