cypress/scripts/sample.extra-database-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-ip-to-hhb-database
spec:
  podSelector:
    matchLabels:
      app: hhb-database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: ${PUBLIC_IP}/32
---
apiVersion: v1
kind: Service
metadata:
  name: hhb-database-public-service
spec:
  type: LoadBalancer
  selector:
    app: hhb-database
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
